--- a/src/css/App.css
+++ b/src/css/App.css
@@ -56,7 +56,8 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  width: 450px;
+  align-items: center;
+  justify-content: center;
 }
 .item{
   display: block;
