--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -21,7 +21,9 @@
   justify-content: center;
   height: 100vh;
 }
-
+.menu li{
+  list-style: none;
+}
 .menu__link{
   font-size: 18px;
   color: #fff;
@@ -48,6 +50,11 @@
   flex-direction: column;
   justify-content: center;
   height: 100%
+}
+
+.body-this .menu__link{
+  position: absolute;
+  bottom: 20%;
 }
 .gameplace{
   margin-top: 40px;
