--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -1,6 +1,7 @@
+@import url("https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css");
+
 .App{
-  height: 100vh;
-  background: linear-gradient(180deg, rgba(153,218,255,1) 0%, rgba(0,128,128,1) 100%);
+  /* background: linear-gradient(180deg, rgba(153,218,255,1) 0%, rgba(0,128,128,1) 100%); */
 }
 .list{
   margin: 0;
@@ -11,6 +12,27 @@
   list-style: none;
 }
 
+.signin {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    height: 100vh;
+}
+
+.signin form {
+    width: 400px;
+}
+
+.acc {
+    text-align: center;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    height: 20vh;
+}
+
 .menu{
   text-align: center;
   display: -webkit-flex;
@@ -19,15 +41,18 @@
   align-items: center;
   flex-direction: column;
   justify-content: center;
-  height: 100vh;
+  height: 60vh;
+}
+.menu ul {
+    padding: 0;
 }
 .menu li{
   list-style: none;
 }
-.menu__link{
+/* .menu__link{
   font-size: 18px;
   color: #fff;
-  text-shadow: 0px 0px 1px rgba(0,0,0,0.3), 0 0 1px rgba(0,0,0,0.5); /* Параметры тени */
+  text-shadow: 0px 0px 1px rgba(0,0,0,0.3), 0 0 1px rgba(0,0,0,0.5);
   text-transform: uppercase;
   text-decoration: none;
   line-height: 2;
@@ -36,7 +61,7 @@
   text-align: center;
   position: relative;
   bottom: 150px
-}
+} */
 
 .body{
   height: 100vh;
@@ -49,15 +74,14 @@
   align-items: center;
   flex-direction: column;
   justify-content: center;
-  height: 100%
+  height: 100vh;
 }
 
 .body-this .menu__link{
-  position: absolute;
-  bottom: 20%;
+
 }
 .gameplace{
-  margin-top: 40px;
+  margin: 50px 0;
   display: -webkit-flex;
   display: -ms-flex;
   display: flex;
@@ -78,8 +102,16 @@
   width: 100%;
   height: 100%;
 }
+.alert span {
+    display: inline-block;
+    margin-right: 10px;
+}
+.alert span:last-child {
+    margin-right: 0;
+}
 .item:hover{
-  border: 1px solid #fff
+  background: #2ecc71;
+  /* border: 1px solid green; */
 }
 .item--flip{
   border: 1px sold green
@@ -97,7 +129,13 @@
 .table-body .aplha__li{
   margin: 5px 0;
 }
-
+.words {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    height: 20vh;
+}
 .codes span{
   margin-right: 10px;
 }
